--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "googleapis": "^146.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
+    "node-schedule": "^2.1.1",
     "python-shell": "^5.0.0"
   }
 }
