--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^146.0.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.11.0",
     "node-schedule": "^2.1.1",
     "python-shell": "^5.0.0"
   }
