--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "node-schedule": "^2.1.1",
-    "python-shell": "^5.0.0"
+    "python-shell": "^5.0.0",
+    "react-toastify": "^11.0.5"
   }
 }
